<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_rom_config_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="18dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textRomConfigTitle"
            style="?android:attr/windowTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="Super Mario 64 DS" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/selectarea"
        android:layout_below="@+id/layout_rom_config_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutPrefSystem"
            style="@style/Layout.RomSetting">

            <LinearLayout style="@style/Layout.RomSettingContent">

                <TextView
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rom_config_console" />

                <TextView
                    android:id="@+id/textPrefRuntimeConsoleType"
                    style="@style/Text.RomSetting.Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:text="Default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrefRuntimeMicSource"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefSystem">

            <LinearLayout style="@style/Layout.RomSettingContent">

                <TextView
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microphone_source" />

                <TextView
                    android:id="@+id/textPrefRuntimeMicSource"
                    style="@style/Text.RomSetting.Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:text="Default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrefLayout"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefRuntimeMicSource">

            <LinearLayout style="@style/Layout.RomSettingContent">

                <TextView
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/controller_layout" />

                <TextView
                    android:id="@+id/textPrefLayout"
                    style="@style/Text.RomSetting.Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    tools:text="Default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrefLoadGbaRom"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefLayout"
            android:minHeight="48dp">

            <RelativeLayout style="@style/Layout.RomSettingContent">

                <TextView
                    android:id="@+id/label_preference_load_gba_cart"
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rom_config_load_gba_rom" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchLoadGbaRom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:background="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrefGbaRomPath"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefLoadGbaRom">

            <LinearLayout style="@style/Layout.RomSettingContent">

                <TextView
                    android:id="@+id/label_preference_gba_cart_path"
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rom_config_gba_rom_path" />

                <TextView
                    android:id="@+id/textPrefGbaRomPath"
                    style="@style/Text.RomSetting.Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="start"
                    tools:text="/storage/emulated/0/Emulators/GBA/Mario.gba" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrefGbaSavePath"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefGbaRomPath">

            <LinearLayout style="@style/Layout.RomSettingContent">

                <TextView
                    android:id="@+id/label_preference_gba_save_path"
                    style="@style/Text.RomSetting.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rom_config_gba_save_path" />

                <TextView
                    android:id="@+id/textPrefGbaSavePath"
                    style="@style/Text.RomSetting.Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="start"
                    tools:text="/storage/emulated/0/Emulators/GBA/Mario.sav" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutimportsavepath"
            style="@style/Layout.RomSetting"
            android:layout_below="@+id/layoutPrefGbaSavePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/import_save_text"
                style="@style/Text.RomSetting.Title"
                android:text="@string/import_battery_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/import_save_des"
                android:layout_below="@+id/import_save_text"
                android:text="@string/import_battery_save_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
<!--        <LinearLayout-->
<!--            android:id="@+id/layoutimportsavepath"-->
<!--            style="@style/Layout.RomSetting"-->
<!--            android:layout_below="@+id/layoutPrefGbaSavePath">-->

<!--            <LinearLayout style="@style/Layout.RomSettingContent">-->

<!--                <TextView-->
<!--                    android:id="@+id/label_preference_import_save"-->
<!--                    style="@style/Text.RomSetting.Title"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/import_battery_save" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textPrefImportsave"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    tools:text="dfdsfdsfdsfdsfdsfds" />-->
<!--            </LinearLayout>-->
<!--        </LinearLayout>-->

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_rom_config_controls"
        android:layout_below="@+id/selectarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp">

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_rom_config_cancel"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_rom_config_ok"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>
</RelativeLayout>